apps/monitoring/ntfy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ntfy
    gethomepage.dev/description: Push notifications
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: ntfy.png
    gethomepage.dev/href: https://ntfy.${SECRET_DOMAIN}
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ntfy.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: ntfy
          port: 80
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
